--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -1,68 +1,39 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en" xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" layout:decorate="template">
 <head>
     <meta charset="UTF-8">
     <title>All Events</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="/vendor/css/core.css">
-    <link rel="stylesheet" href="/vendor/css/theme-default.css">
-    <link rel="stylesheet" href="/css/demo.css">
 </head>
 <body>
-<nav class="navbar navbar-expand-lg bg-body-tertiary pt-1_5 pb-1_5">
-    <div class="container-fluid">
-        <div class="container-fluid">
-            <a href="/">
-                <span class="app-brand-text demo menu-text fw-bold ms-2">
-            S'bitar Nun
-          </span>
-            </a>
-        </div>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link active ms-3" href="/patients" style="color: white">Patients</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link ms-3" href="/doctors" style="color: white">Doctors</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link ms-3" href="/rooms" style="color: white">Rooms</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link ms-3" href="/payments" style="color: white">Payments</a>
-                </li>
-            </ul>
-        </div>
-    </div>
-</nav>
+<div layout:fragment="content">
 <div class="card d-flex align-items-center vh-100">
-    <div class="table-responsive text-nowrap">
+    <div class="table-responsive text-nowrap"  style="width: 60%">
         <div class="row">
             <div class="d-flex justify-content-between align-items-center py-4 px-5 ">
-                <a href="/patients/create">
+                <a th:href="@{/patients/add}">
                     <button class="btn add-new btn-primary" type="button">
                         <i class="fa-solid fa-plus ms-n2 me-2"></i>
                         <span>Add</span>
                     </button>
                 </a>
                 <form th:method="get" th:action="@{/patients}" class="d-flex align-items-center">
+                    <input type="hidden" name="size" th:value="${size}">
                     <input type="text" name="keyword" th:value="${keyword}" placeholder="search" class="form-control me-2" style="width: 220px;">
                     <button type="submit" class="btn btn-outline-info">
                         <span class="fw-bold">Search</span>
                     </button>
                 </form>
-                <form th:method="get" th:action="@{/patients(page=${currentPage}, size=${size})}" class="d-flex align-items-center">
+                <form th:method="get" th:action="@{/patients}" class="d-flex align-items-center">
                     <label class="me-2">Page Size :</label>
+                    <input type="hidden" name="page" th:value="${currentPage}">
                     <input type="text" name="size" th:value="${size}" min="1" class="form-control me-2" pattern="\d*" inputmode="numeric" style="width: 50px;">
-                    <input type="hidden" name="currentPage" th:value="${currentPage}">
+                    <input type="hidden" name="keyword" th:value="${keyword}">
                     <button type="submit" class="btn btn-outline-info">
                         <span class="fw-bold">Apply</span>
                     </button>
                 </form>
             </div>
-            <div th:if="${success}" class="alert alert-success d-flex text-end" role="alert">
+            <div th:if="${success}" class="alert alert-success d-flex text-end" style="width: 60%" role="alert">
                 <strong th:text="${success}"></strong>
                 <button type="button" class="btn-close ms-auto" data-bs-dismiss="alert" aria-label="Close"></button>
             </div>
@@ -91,7 +62,7 @@
                     <span class="text-heading" th:text="${patient.gender}"></span>
                 </td>
                 <td>
-                    <span class="text-heading" th:text="${patient.dateOfBirth}"></span>
+                    <span class="text-heading" th:text="${#dates.format(patient.dateOfBirth, 'yyyy-MM-dd')}"></span>
                 </td>
                 <td>
                     <span class="text-heading" th:text="${patient.sick}"></span>
@@ -101,24 +72,20 @@
                 </td>
                 <td>
                     <div class="d-flex align-items-center">
-                        <form method="get" th:action="@{/patients/update/{id}(id=${patient.ID})}">
-                            <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
-                            <button type="submit" class="btn btn-warning me-2">
+                        <a th:href="@{/patients/update(id=${patient.ID}, keyword=${keyword},
+                        page=${currentPage}, size=${size})}" class="btn btn-warning me-2">
                                 <i class="fa-solid fa-pen"></i>
-                            </button>
-                        </form>
-                        <form th:method="delete" th:action="@{/patients/delete/{id}(id=${patient.ID})}">
-                            <!--<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">-->
-                            <button type="submit" class="btn btn-danger">
+                        </a>
+                        <a th:href="@{/patients/delete(id=${patient.ID}, keyword=${keyword},
+                        page=${currentPage}, size=${size})}" class="btn btn-danger">
                                 <i class="fa-solid fa-trash"></i>
-                            </button>
-                        </form>
+                        </a>
                     </div>
                 </td>
             </tr>
             </tbody>
         </table>
-        <ul class="mt-5 nav nav-pills" style="margin-left: 35%">
+        <ul class="mt-5 nav nav-pills">
             <li th:each="nb, status : ${nbPages}">
                 <a th:href="@{/patients(page=${status.index}, size=${size}, keyword=${keyword})}"
                    th:class="${currentPage == status.index?'btn btn-success me-3':'btn btn-primary me-3'}">
@@ -127,6 +94,7 @@
             </li>
         </ul>
     </div>
+</div>
 </div>
 </body>
 </html>
