--- a/src/main/resources/templates/addPatient.html
+++ b/src/main/resources/templates/addPatient.html
@@ -59,7 +59,7 @@
         <div class="text-end">
             <a class="ms-2 link-offset-2 link-offset-3-hover
                       link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
-               href="/patients">Back to List</a>
+               href="/user/patients">Back to List</a>
         </div>
     </div>
 </div>
