--- a/src/main/resources/templates/patients.html
+++ b/src/main/resources/templates/patients.html
@@ -9,8 +9,9 @@
 <div class="card d-flex align-items-center vh-100">
     <div class="table-responsive text-nowrap"  style="width: 60%">
         <div class="row">
+            <div th:if="${name}"><h1>Welcome <span th:text="${name}"></span></h1></div>
             <div class="d-flex justify-content-between align-items-center py-4 px-5 ">
-                <a th:href="@{/patients/add}">
+                <a th:if="${#authorization.expression('hasRole(''ADMIN'')')}" th:href="@{/admin/patients/add}">
                     <button class="btn add-new btn-primary" type="button">
                         <i class="fa-solid fa-plus ms-n2 me-2"></i>
                         <span>Add</span>
@@ -23,7 +24,7 @@
                         <span class="fw-bold">Search</span>
                     </button>
                 </form>
-                <form th:method="get" th:action="@{/patients}" class="d-flex align-items-center">
+                <form th:method="get" th:action="@{/user/patients}" class="d-flex align-items-center">
                     <label class="me-2">Page Size :</label>
                     <input type="hidden" name="page" th:value="${currentPage}">
                     <input type="text" name="size" th:value="${size}" min="1" class="form-control me-2" pattern="\d*" inputmode="numeric" style="width: 50px;">
@@ -50,7 +51,7 @@
                 <th class="sorting" > Date </th>
                 <th class="sorting" > Sick </th>
                 <th class="sorting" > Score </th>
-                <th class="sorting" > Actions </th>
+                <th th:if="${#authorization.expression('hasRole(''ADMIN'')')}" class="sorting" > Actions </th>
             </tr>
             </thead>
             <tbody>
@@ -72,14 +73,17 @@
                 </td>
                 <td>
                     <div class="d-flex align-items-center">
-                        <a th:href="@{/patients/update(id=${patient.ID}, keyword=${keyword},
+                        <a th:if="${#authorization.expression('hasRole(''ADMIN'')')}"
+                           th:href="@{/admin/patients/update(id=${patient.ID}, keyword=${keyword},
                         page=${currentPage}, size=${size})}" class="btn btn-warning me-2">
                                 <i class="fa-solid fa-pen"></i>
                         </a>
-                        <a th:href="@{/patients/delete(id=${patient.ID}, keyword=${keyword},
-                        page=${currentPage}, size=${size})}" class="btn btn-danger">
+                        <form th:if="${#authorization.expression('hasRole(''ADMIN'')')}" method="post" th:action="@{/admin/patients/delete(id=${patient.ID}, keyword=${keyword},
+                        page=${currentPage}, size=${size})}">
+                            <button type="submit" class="btn btn-danger">
                                 <i class="fa-solid fa-trash"></i>
-                        </a>
+                            </button>
+                        </form>
                     </div>
                 </td>
             </tr>
@@ -87,7 +91,7 @@
         </table>
         <ul class="mt-5 nav nav-pills">
             <li th:each="nb, status : ${nbPages}">
-                <a th:href="@{/patients(page=${status.index}, size=${size}, keyword=${keyword})}"
+                <a th:href="@{/user/patients(page=${status.index}, size=${size}, keyword=${keyword})}"
                    th:class="${currentPage == status.index?'btn btn-success me-3':'btn btn-primary me-3'}">
                     <span class="fw-bold text-white" th:text="${status.index + 1}"></span>
                 </a>
