--- a/src/main/resources/templates/template.html
+++ b/src/main/resources/templates/template.html
@@ -23,7 +23,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
-                    <a class="nav-link active ms-3" href="/patients" style="color: white">Patients</a>
+                    <a class="nav-link active ms-3" href="/user/patients" style="color: white">Patients</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link ms-3" href="/doctors" style="color: white">Doctors</a>
@@ -35,6 +35,9 @@
                     <a class="nav-link ms-3" href="/payments" style="color: white">Payments</a>
                 </li>
             </ul>
+            <form method="post" th:action="@{/logout}">
+                <button type="submit" class="btn btn-danger ms-3">Logout</button>
+            </form>
         </div>
     </div>
 </nav>
